<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/settings_background"
    tools:context=".NewGameFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gameModeLabel"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <RadioGroup
            android:id="@+id/gameModeRadioGroup"
            android:theme="@style/AppTheme.MenuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/nativeModeRadioButton">

            <RadioButton
                android:id="@+id/nativeModeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nativeMode"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/foreignModeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foreignMode" />

            <RadioButton
                android:id="@+id/numbersModeRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/numbersMode"
                android:visibility="visible" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/setViewLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/WordSetNameNGF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/WordSetName"
                    tools:layout_editor_absoluteY="710dp" />

                <TextView
                    android:id="@+id/WordSetDescriptionNGF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/WordSetDescription"
                    tools:layout_editor_absoluteY="709dp" />

            </LinearLayout>

            <Button
                android:id="@+id/setBuilderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChangeSet"
                tools:layout_editor_absoluteY="707dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/difficultyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficultyLabel"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difficultyEasy" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difficultyMedium"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difficultyHard"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/difficultyBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2"
            android:progress="1" />

        <Button
            android:id="@+id/playNewGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            android:textAlignment="center" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>