<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:text="@string/NativeLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nativeLangSpinner"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="false"
            android:hint="@string/NativeWordHint">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nativeInput"
                />

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:text="@string/ForeignLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            />

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/foreignLangSpinner"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ForeignWordHint">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/foreignInput"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>