<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:background="@drawable/settings_background"
                                             tools:context=".SelectGameFragment"
                                             android:clickable="true"
                                             android:focusable="true"
                                             android:layout_gravity="center">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:id="@+id/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/settings_header"
                android:text="@string/continueGameHeader"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="22sp"
                android:textStyle="bold"/>

        <android.support.v4.view.ViewPager
                android:id="@+id/gameSavePager"
                android:layout_width="300dp"
                android:layout_height="300dp"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/selectGameCancelButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/red_button"
                    android:elevation="0dp"
                    android:text="@string/cancel_button"
                    android:textSize="15sp"/>

            <Button
                    android:id="@+id/deleteButtonSelectGameFragment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/red_button"
                    android:elevation="0dp"
                    android:text="@string/deleteButton"
                    android:textSize="15sp"/>

            <Button
                    android:id="@+id/playButtonSelectGameFragment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/red_button"
                    android:elevation="0dp"
                    android:text="@string/play_button"
                    android:textSize="15sp"/>

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>